// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductBundleOverview /> component its snapshot matches story Default 1`] = `
.c5 .price-list {
  color: rgba(22,22,22,0.25);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c0 {
  border-top: 1px solid #e0e0e0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem 1rem;
  padding-left: 0;
}

.c0:first-of-type {
  border-top: none;
  padding-top: 0;
}

.c0:last-of-type {
  padding-bottom: 0;
}

.c1 {
  width: 20%;
  border: 1px solid #dedede;
}

.c2 {
  padding-left: 1rem;
  width: 70%;
}

.c4 {
  color: #161616;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  margin-bottom: 0.75rem;
}

.c4 > span > div {
  margin-left: 0.5rem;
  display: inline;
}

.c4 > span > div:first-of-type {
  margin-left: 0;
}

.c3 {
  color: #161616;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  margin-bottom: 0.75rem;
}

<div>
  <div
    class="ProductBundleOverviewstyles__ProductBundleOverview-sc-d0wlo3-0"
  >
    <div
      class="ProductBundleOverviewstyles__Wrapper-sc-d0wlo3-1"
    >
      <div
        class="c0"
      >
        <img
          class="c1"
          src="http://placeimg.com/640/480/food"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Handcrafted Metal Ball
          </div>
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              <span
                class="value"
              >
                €227
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="c0"
      >
        <img
          class="c1"
          src="http://placeimg.com/640/480/nightlife"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Awesome Metal Fish
          </div>
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              <span
                class="value"
              >
                €424
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="c0"
      >
        <img
          class="c1"
          src="http://placeimg.com/640/480/fashion"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Tasty Cotton Chicken
          </div>
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              <div
                class="price-list"
              >
                <span
                  class="value"
                >
                  €481
                </span>
              </div>
              <div
                class="price-offer"
              >
                <span
                  class="value"
                >
                  €140
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="c0"
      >
        <img
          class="c1"
          src="http://placeimg.com/640/480/people"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Fantastic Cotton Pants
          </div>
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              <div
                class="price-list"
              >
                <span
                  class="value"
                >
                  €730
                </span>
              </div>
              <div
                class="price-offer"
              >
                <span
                  class="value"
                >
                  €325
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="c0"
      >
        <img
          class="c1"
          src="http://placeimg.com/640/480/nature"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Practical Concrete Car
          </div>
          <div
            class="c4"
          >
            <span
              class="c5"
            >
              <span
                class="value"
              >
                €399
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductBundleOverview /> component its snapshot matches story Skeleton 1`] = `
.c4 {
  width: 5.5em;
  border-radius: 5px;
  -webkit-animation: pulse 1.2s ease-in-out infinite;
  animation: pulse 1.2s ease-in-out infinite;
  background: linear-gradient(-90deg,#f0f0f0 0%,#f8f8f8 50%,#f0f0f0 100%);
  background-size: 400% 400%;
  display: inline-block;
  height: 100%;
}

.c4::before {
  content: '\\00a0';
}

.c0 {
  border-top: 1px solid #e0e0e0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem 1rem;
  padding-left: 0;
}

.c0:first-of-type {
  border-top: none;
  padding-top: 0;
}

.c0:last-of-type {
  padding-bottom: 0;
}

.c1 {
  width: 20%;
  border: 1px solid #dedede;
}

.c2 {
  padding-left: 1rem;
  width: 70%;
}

.c5 {
  color: #161616;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  margin-bottom: 0.75rem;
}

.c5 > span > div {
  margin-left: 0.5rem;
  display: inline;
}

.c5 > span > div:first-of-type {
  margin-left: 0;
}

.c3 {
  color: #161616;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  margin-bottom: 0.75rem;
}

<div>
  <div
    class="ProductBundleOverviewstyles__ProductBundleOverview-sc-d0wlo3-0"
  >
    <div
      class="ProductBundleOverviewstyles__Wrapper-sc-d0wlo3-1"
    >
      <div
        class="c0"
      >
        <img
          class="c1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAAEElEQVR42mP88J8BCBghFAAi4gPhKRu9/AAAAABJRU5ErkJggg=="
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            />
          </div>
          <div
            class="c5"
          >
            <div
              class="c4"
            />
          </div>
        </div>
      </div>
      <div
        class="c0"
      >
        <img
          class="c1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAAEElEQVR42mP88J8BCBghFAAi4gPhKRu9/AAAAABJRU5ErkJggg=="
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            />
          </div>
          <div
            class="c5"
          >
            <div
              class="c4"
            />
          </div>
        </div>
      </div>
      <div
        class="c0"
      >
        <img
          class="c1"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAAEElEQVR42mP88J8BCBghFAAi4gPhKRu9/AAAAABJRU5ErkJggg=="
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            />
          </div>
          <div
            class="c5"
          >
            <div
              class="c4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
